--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
             android:allowBackup="true"
             android:dataExtractionRules="@xml/data_extraction_rules"
             android:fullBackupContent="@xml/backup_rules"
+            android:hardwareAccelerated="true"
             android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
@@ -13,7 +14,7 @@
             android:theme="@style/Theme.Urava"
             tools:targetApi="31">
         <activity
-                android:name=".StickyBannerAdActivity"
+                android:name=".InlineBannerAdActivity"
                 android:exported="false"/>
         <activity
                 android:name=".What"
